--- a/frontend-templating/package.json
+++ b/frontend-templating/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
     "gulp": "^3.9.1",
     "handlebars": "^4.0.5",
-    "react": "^15.1.0"
+    "react": "^15.1.0",
+    "tsd": "^0.6.5",
+    "typings": "^1.0.4"
   }
 }
