--- a/frontend-templating/frontend-templating.csproj
+++ b/frontend-templating/frontend-templating.csproj
@@ -80,6 +80,8 @@
     <Content Include="lib\handlebars.js" />
     <Content Include="lib\react.js" />
     <Content Include="packages.config" />
+    <Content Include="webpack.config.js" />
+    <Content Include="package.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -97,13 +99,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="demos\handlebars\src\" />
-    <Folder Include="demos\react\src\" />
+    <Folder Include="dist\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="demos\angular\src\app\app.component.ts" />
     <TypeScriptCompile Include="demos\angular\src\core\index.ts" />
     <TypeScriptCompile Include="demos\angular\src\main.ts" />
+    <TypeScriptCompile Include="demos\handlebars\src\main.ts" />
+    <TypeScriptCompile Include="demos\react\src\main.ts" />
     <TypeScriptCompile Include="typings\angularjs\angular-route.d.ts" />
     <TypeScriptCompile Include="typings\angularjs\angular.d.ts" />
   </ItemGroup>
