--- a/frontend-templating/package.json
+++ b/frontend-templating/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "handlebars": "^4.0.5",
     "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "ts-loader": "^0.8.2",
     "tsd": "^0.6.5",
     "typescript": "^1.8.10",
